--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -56,17 +56,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
+  fonts:
+     - family: Pridi
+       fonts:
+         - asset: assets/fonts/Pridi-Regular.ttf
+         - asset: assets/fonts/Pridi-Light.ttf
+         - asset: assets/fonts/Pridi-SemiBold.ttf
+         - asset: assets/fonts/Pridi-Bold.ttf
+     - family: Sawara
+       fonts:
+         - asset: assets/fonts/SawarabiMincho-Regular.ttf
+
   # see https://flutter.dev/custom-fonts/#from-packages
