--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -25,9 +25,16 @@ dependencies:
   cupertino_icons: ^0.1.2
   eva_icons_flutter: ^2.0.0
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: any
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/face.png"
 
 
 # For information on the generic Dart part of this file, see the
@@ -40,6 +47,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+
 
   # To add assets to your application, add an assets section, like this:
   assets:
